--- a/index.html
+++ b/index.html
@@ -30,8 +30,18 @@
         </select>
     </div><br>
     <div id="colourpicker">
-        <h2>Pick A Color</h2>
-        <br><input type="color" id="colorPicker" class="bttn-success bttn-sm bttn-unite"><br><br><br><br>
+        <div id="colourin">
+            <h2>Pick A Color</h2>
+            <br><input type="color" id="colorPicker" class="bttn-success bttn-sm bttn-unite"><br><br><br><br>
+        </div>
+        <div id="typin" hidden>
+            <h2>Pick the Font Color</h2>
+            <br><input type="color" id="fontColor" class="bttn-success bttn-sm bttn-unite"><br><br><br><br>
+            <h2>Pick the Font Size</h2>
+            <br><input type="number" id="fontSize"><br><br><br><br>
+            <h2>Pick the Font Family</h2>
+            <br><input type="text" id="fontFamily"><br><br><br><br>
+        </div>
     </div>
     <h2>Design Canvas</h2>
     <button id="hidegrids" class="bttn-danger bttn-md bttn-slant">Hide Grid Lines</button>&emsp;&emsp;&emsp;&emsp;
