--- a/index(arabic).html
+++ b/index(arabic).html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>صانع الفن بالمربعات!</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bttn.css/0.2.4/bttn.css">
     <link rel="stylesheet" href="Style.css">
