--- a/index(arabic).html
+++ b/index(arabic).html
@@ -45,7 +45,7 @@
         </div>
     </div>
     <h2>تصميم اللوحة</h2>
-    <button id="hidegrids" class="bttn-danger bttn-md bttn-slant">إخفاء خطوط الشبكة</button>&emsp;&emsp;&emsp;&emsp;
+    <button id="hidegrids" class="bttn-danger bttn-md bttn-slant">إخفاء خطوط الشبكة</button>
     <button id="returngrids" class="bttn-danger bttn-md bttn-slant">إظهار خطوط الشبكة</button><br><br>
     <table id="pixelCanvas"><tbody>
         
