--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
     </div>
     <h2>Design Canvas</h2>
-    <button id="hidegrids" class="bttn-danger bttn-md bttn-slant">Hide Grid Lines</button>&emsp;&emsp;&emsp;&emsp;
+    <button id="hidegrids" class="bttn-danger bttn-md bttn-slant">Hide Grid Lines</button>
     <button id="returngrids" class="bttn-danger bttn-md bttn-slant">Show Grid Lines</button><br><br>
     <table id="pixelCanvas"><tbody>
 
