--- a/index(arabic).html
+++ b/index(arabic).html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="Style.css">
 </head>
 <body>
-    <a id="english" href="index(english).html">
+    <a id="english" href="index.html">
         <span></span>
         <span></span>
         <span></span>
