--- a/index(arabic).html
+++ b/index(arabic).html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="Style.css">
 </head>
 <body>
-    <a id="english" href="index.html">
+    <a id="english" href="index(english).html">
         <span></span>
         <span></span>
         <span></span>
@@ -50,6 +50,7 @@
     <table id="pixelCanvas"><tbody>
         
     </tbody></table>
+    <button id = "download" class="bttn-fill bttn-lg bttn-royal" hidden>تنزيل الرسمة بصيغة ملف excel</button>
     <script src="Script.js"></script>
 </body>
 </html>
