--- a/index(arabic).html
+++ b/index(arabic).html
@@ -40,8 +40,23 @@
             <br><input type="color" id="fontColor" class="bttn-success bttn-sm bttn-unite"><br><br><br><br>
             <h2>أدخل حجم الخط</h2>
             <br><input type="number" id="fontSize"><br><br><br><br>
-            <h2>أدخل نوع الخط باللغة الإنجليزية</h2>
-            <br><input type="text" id="fontFamily"><br><br><br><br>
+            <h2><br>أدخل نوع الخط باللغة الإنجليزية</h2>
+            <br><input type="text" placeholder="أخرى" list="fontFamily">
+            <datalist id="fontFamily">
+                <option value="Arial">Arial</option>
+                <option value="Calibri">Calibri</option>
+                <option value="Serif">Serif</option>
+                <option value="Sans-serif">Sans-serif</option>
+                <option value="Cursive">Cursive</option>
+                <option value="Times New Roman">Times New Roman</option>
+                <option value="Georgia">Georgia</option>
+                <option value="Veranda">Veranda</option>
+                <option value="Courier New">Courier New</option>
+                <option value="Lucida Console">Lucida Console</option>
+                <option value="Impact">Impact</option>
+                <option value="Helvetica">Helvetica</option>
+                <option value="Charcoal">Charcoal</option>
+            </datalist><br><br><br><br>
         </div>
     </div>
     <h2>تصميم اللوحة</h2>
