--- a/index(arabic).html
+++ b/index(arabic).html
@@ -41,8 +41,8 @@
             <h2>أدخل حجم الخط</h2>
             <br><input type="number" id="fontSize"><br><br><br><br>
             <h2><br>أدخل نوع الخط باللغة الإنجليزية</h2>
-            <br><input type="text" placeholder="أخرى" list="fontFamily">
-            <datalist id="fontFamily">
+            <br><input type="text" placeholder="أخرى" list="theFamily" id="fontFamily">
+            <datalist id="theFamily">
                 <option value="Arial">Arial</option>
                 <option value="Calibri">Calibri</option>
                 <option value="Serif">Serif</option>
