--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
             <h2>Pick the Font Size</h2>
             <br><input type="number" id="fontSize"><br><br><br><br>
             <h2><br>Pick the Font Family</h2>
-            <br><input type="text" placeholder="Other" list="fontFamily">
-            <datalist id="fontFamily">
+            <br><input type="text" placeholder="Other" list="theFamily" id="fontFamily">
+            <datalist id="theFamily">
                 <option value="Arial">Arial</option>
                 <option value="Calibri">Calibri</option>
                 <option value="Serif">Serif</option>
