--- a/index(arabic).html
+++ b/index(arabic).html
@@ -43,19 +43,19 @@
             <h2><br>أدخل نوع الخط باللغة الإنجليزية</h2>
             <br><input type="text" placeholder="أخرى" list="theFamily" id="fontFamily">
             <datalist id="theFamily">
-                <option value="Arial">Arial</option>
-                <option value="Calibri">Calibri</option>
-                <option value="Serif">Serif</option>
-                <option value="Sans-serif">Sans-serif</option>
-                <option value="Cursive">Cursive</option>
-                <option value="Times New Roman">Times New Roman</option>
-                <option value="Georgia">Georgia</option>
-                <option value="Veranda">Veranda</option>
-                <option value="Courier New">Courier New</option>
-                <option value="Lucida Console">Lucida Console</option>
-                <option value="Impact">Impact</option>
-                <option value="Helvetica">Helvetica</option>
-                <option value="Charcoal">Charcoal</option>
+                <option value="Arial" style="font-family: arial;">Arial</option>
+                <option value="Calibri" style="font-family: calibri;">Calibri</option>
+                <option value="Serif" style="font-family: serif;">Serif</option>
+                <option value="Sans-serif" style="font-family: sans-serif;">Sans-serif</option>
+                <option value="Cursive" style="font-family: cursive;">Cursive</option>
+                <option value="Times New Roman" style="font-family: 'times new roman';">Times New Roman</option>
+                <option value="Georgia" style="font-family: georgia;">Georgia</option>
+                <option value="Veranda" style="font-family: veranda;">Veranda</option>
+                <option value="Courier New" style="font-family: 'courier new';">Courier New</option>
+                <option value="Lucida Console" style="font-family: 'lucida console';">Lucida Console</option>
+                <option value="Impact" style="font-family: impact;">Impact</option>
+                <option value="Helvetica" style="font-family: helvetica;">Helvetica</option>
+                <option value="Charcoal" style="font-family: charcoal;">Charcoal</option>
             </datalist><br><br><br><br>
         </div>
     </div>
