--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <table id="pixelCanvas"><tbody>
 
     </tbody></table>
-    <button id = "download" class="bttn-fill bttn-lg bttn-royal" hidden>download the drawing with by excel</button>
+    <button id = "download" class="bttn-fill bttn-lg bttn-royal" hidden>download the drawing with excel</button>
     <script src="Script.js"></script>
 </body>
 </html>
