--- a/index(arabic).html
+++ b/index(arabic).html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>صانع الفن بالمربعات!</title>
-    <link rel="shortcut icon" href="https://lh3.googleusercontent.com/proxy/TTZONHHzfjUxPQofZOqIuqMmYq3EB0KEAMR1rofv8AokCFMfzyGWz757JBN8YAX-WXaRiNt_38E7RusTZfBeXpY">
+    <link rel="shortcut icon" href="icon_image.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bttn.css/0.2.4/bttn.css">
     <link rel="stylesheet" href="Style.css">
 </head>
